...
  final List<GlobalKey<NavigatorState>> _tabNavigatorKeys =
      List.generate(_destinations.length, (_) => GlobalKey<NavigatorState>());

  static const _destinations = [
    NavigationDestination(
      icon: Icon(Symbols.home_rounded),
      label: 'Home',
    ),
    NavigationDestination(
      icon: Icon(Symbols.menu_book_rounded),
      label: 'Verses',
    ),
    NavigationDestination(
      icon: Icon(Symbols.repeat_rounded),
      label: 'Review',
    ),
    NavigationDestination(
...
